Pricing and pricing tags are working mostly correctly. Need to test and fix a few special scenarios.